--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
             </div>
           </div>
 
-          <div class="carousel__item">
+         <div class="carousel__item">
             <div class="carousel__item-box">
               <img
-                src="images/carousel/4.jpg"
+                src="images/carousel/3.jpg"
                 alt=""
                 class="carousel__item-image"
               />
-              <h4 class="carousel__item-title">Volkswagen passat b4 1994 г.</h4>
+              <h4 class="carousel__item-title">Lexus LX50 2018 г.</h4>
               <p class="carousel__item-text">Экономия 5500 $</p>
             </div>
           </div>
@@ -229,11 +229,11 @@
           <div class="carousel__item">
             <div class="carousel__item-box">
               <img
-                src="images/carousel/5.jpg"
+                src="images/carousel/3.jpg"
                 alt=""
                 class="carousel__item-image"
               />
-              <h4 class="carousel__item-title">Volkswagen passat b5 1994 г.</h4>
+              <h4 class="carousel__item-title">Lexus LX50 2018 г.</h4>
               <p class="carousel__item-text">Экономия 5500 $</p>
             </div>
           </div>
@@ -241,27 +241,11 @@
           <div class="carousel__item">
             <div class="carousel__item-box">
               <img
-                src="images/carousel/6.jpg"
+                src="images/carousel/3.jpg"
                 alt=""
                 class="carousel__item-image"
               />
-             
-                <h4 class="carousel__item-title">
-                  Volkswagen passat b6 1994 г.
-                </h4>
-                <p class="carousel__item-text">Экономия 5500 $</p>
-              
-            </div>
-          </div>
-
-          <div class="carousel__item">
-            <div class="carousel__item-box">
-              <img
-                src="images/carousel/7.jpg"
-                alt=""
-                class="carousel__item-image"
-              />
-              <h4 class="carousel__item-title">Volkswagen passat b7 1994 г.</h4>
+              <h4 class="carousel__item-title">Lexus LX50 2018 г.</h4>
               <p class="carousel__item-text">Экономия 5500 $</p>
             </div>
           </div>
@@ -269,11 +253,23 @@
           <div class="carousel__item">
             <div class="carousel__item-box">
               <img
-                src="images/carousel/8.jpg"
+                src="images/carousel/3.jpg"
                 alt=""
                 class="carousel__item-image"
               />
-              <h4 class="carousel__item-title">Volkswagen passat b8 1994 г.</h4>
+              <h4 class="carousel__item-title">Lexus LX50 2018 г.</h4>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img
+                src="images/carousel/3.jpg"
+                alt=""
+                class="carousel__item-image"
+              />
+              <h4 class="carousel__item-title">Lexus LX50 2018 г.</h4>
               <p class="carousel__item-text">Экономия 5500 $</p>
             </div>
           </div>
